--- a/README
+++ b/README
@@ -11,16 +11,19 @@
 / and Adam Setters
 /
 / Date: 10/29/2015
+/ 
+/ Modified by Zhening Li
+/ July 2017
 /-------------------------------------------------------------------------
 
----------------------------------------------------------[ DESCRIPTION ]--
+--------------------------[ DESCRIPTION ]---------------------------------
 
 The files provided are skeleton code, as well as grading previews and 
 testing files to be used in completing the course programming 
 assignments. Additionally, you are provided a runnable JavaFX program 
 which will help to test and demonstrate your implementations.
 
--------------------------------------------------------[ FILES BY WEEK ]--
+---------------------------[ FILES BY WEEK ]------------------------------
 
 Below are the files introduced in each week and used in each week
 of the course. See file for description...
@@ -55,7 +58,7 @@ spelling.WordPath.java
 spelling.NearbyWords.java
 spelling.WPTree.java
 
----------------------------------------------------------------[ SETUP ]-- 
+---------------------------[ SETUP ]------------------------------------
 
 Importing Project into eclipse:
 	1. Create a new Java Project in your workspace
@@ -66,7 +69,7 @@ Importing Project into eclipse:
 Feel free to use another IDE or manually compile and run your programs.
 If you need help, google is your friend.
 
------------------------------------------------------[ ACKNOWLEDGEMENTS]--
+-------------------------[ ACKNOWLEDGEMENTS]-----------------------------
 
 A big thank you to Tomas Mikula for creating RichTextFX 
 which was used as the text area in the GUI application.
